--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 <div>
 <div class="info">
     <div><span>I'M JOSH</span></div>
-    <div><span>FRONTEND DEVELOPER</span></div>
-    <div><span>COMPUTER ENGINEERING STUDENT</span></div>
+    <div><span>SOFTWARE DEVELOPER</span></div>
+    <div><span>COMPUTER ENGINEER</span></div>
+    <div><span>SPACE AND PALEONTOLOGY ENTHUSIAST</span></div>
 
 </div>
 
