--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
         <div class="skills-grid">
             <div class="skill-card">
                 <h3 class="skill-title">Frontend Development</h3>
-                <p>React, Next.js, TypeScript, Tailwind CSS, react-native . Creating responsive and interactive user interfaces with modern frameworks and libraries.</p>
+                <p>React, TypeScript, Tailwind CSS, react-native . Creating responsive and interactive user interfaces with modern frameworks and libraries.</p>
             </div>
             <div class="skill-card">
                 <h3 class="skill-title">Backend Development</h3>
@@ -478,3 +478,4 @@
     </script>
 </body>
 </html>
+
